# distribution_service

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  sonar-project.properties
.github/workflows/: ci_distribution_service.yml
src/: auth_client.rs  categories.rs  config.rs  error.rs  main.rs  models.rs  state.rs  telemetry.rs
src/db/: queries.rs
src/routes/: feed.rs  health.rs  mod.rs
src/rss/: builder.rs  mod.rs
